Feature/refactor (#2)
* feat: Domain Driven Development

* feat: chatbot integration with bucket

* feat: change bucket url

* feat:infra
