# main.go
@@ -4,32 +4,42 @@ import (
 	"log"
 	"net/http"
 	"os"
-	"chatbot-service/handlers"
+
+	"chatbot-service/app/usecase/chat"
+	"chatbot-service/dependencies/bucket"
+	"chatbot-service/dependencies/openai"
+	"chatbot-service/presentation/controller"
+
 	"github.com/joho/godotenv"
-	"chatbot-service/db"
 	"github.com/swaggo/http-swagger"
 	_ "chatbot-service/docs"
 )
 
-// @title Chatbot da Clínica Odontológica
-// @version 1.0
-// @description API para integração com OpenAI e base de pacientes/serviços
+// @title Chatbot 
+// @version 2.0
+// @description API para atendimento inteligente com IA e configuração via bucket
 // @host localhost:8080
 // @BasePath /
-// @contact.name Suporte Técnico
-// @contact.email suporte@clinicasorriso.com
+// @contact.name Equipe Técnica
+// @contact.email suporte@chatbotwhitelabel.com
 func main() {
-	err := godotenv.Load()
-	if err != nil {
+	// Carrega variáveis do .env
+	if err := godotenv.Load(); err != nil {
 		log.Fatal("Erro ao carregar .env")
 	}
-	err = db.Conectar()
-	if err != nil {
-		log.Fatal("Erro ao conectar com o banco:", err)
-	}
 
-	http.HandleFunc("/atendimento", handlers.AtendimentoHandler)
+	// Injeção de dependências
+	bucketService := bucket.NewHTTPBucket()
+	promptRepo := bucket.NewBucketPromptRepository(bucketService)
+	openaiClient := openai.NewClient()
+	chatUseCase := chat.NewChatUseCase(promptRepo, openaiClient)
+	chatController := controller.NewChatController(chatUseCase)
+
+	// Configura endpoints
+	http.HandleFunc("/atendimento", chatController.Handle)
 	http.HandleFunc("/swagger/", httpSwagger.WrapHandler)
+
+	// Porta
 	port := os.Getenv("PORT")
 	if port == "" {
 		port = "8080"
