# types/chat.go
@@ -1,9 +1,0 @@
-package types
-
-type ChatRequest struct {
-	Message string `json:"message"`
-}
-
-type ChatResponse struct {
-	Response string `json:"response"`
-}
